--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "../types/Sessao.tsx"  ],
   "exclude": ["node_modules"]
 }
