--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.26.2",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.27.5",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
