build: exclude server folders from typescript and vercel build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,10 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "../types/Sessao.tsx"  ],
-  "exclude": ["node_modules"]
+  ],
+  "exclude": [
+    "node_modules",
+    "pinklife-nest-server",
+    "pinklife-server"
+  ]
 }
