feat: adiciona login com Google no LoginScreen

--- a/mobile/.env
+++ b/mobile/.env
@@ -1,1 +1,4 @@
 EXPO_PUBLIC_API_URL=https://pinklife-server.onrender.com
+EXPO_PUBLIC_GOOGLE_CLIENT_ID_WEB=xxx.apps.googleusercontent.com
+EXPO_PUBLIC_GOOGLE_CLIENT_ID_ANDROID=xxx.apps.googleusercontent.com
+EXPO_PUBLIC_GOOGLE_CLIENT_ID_IOS=xxx.apps.googleusercontent.com
